EKS branch settings